--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4272,10 +4272,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-width: 1px 0 0;
 }
 .navbar-brand {
+  font-family: 'Monoton', cursive;
   float: left;
   height: 50px;
   padding: 15px 15px;
-  font-size: 18px;
+  font-size: 30px;
   line-height: 20px;
 }
 .navbar-brand:hover,
